Add JSON schema validation of `matchpairs` option

--- a/package.json
+++ b/package.json
@@ -614,7 +614,8 @@
         "vim.matchpairs": {
           "type": "string",
           "markdownDescription": "Characters that form pairs. The % command jumps from one to the other. Only character pairs are allowed that are different, thus you cannot jump between two double quotes. The characters must be separated by a colon. The pairs must be separated by a comma.",
-          "default": "(:),{:},[:]"
+          "default": "(:),{:},[:]",
+          "pattern": "^(.:.)?(,.:.)*$"
         },
         "vim.camelCaseMotion.enable": {
           "type": "boolean",
