Set max value of `history` option to 10000

--- a/package.json
+++ b/package.json
@@ -793,7 +793,8 @@
           "type": "number",
           "description": "How much search or command history should be remembered.",
           "default": 50,
-          "minimum": 1
+          "minimum": 1,
+          "maximum": 10000
         },
         "vim.autoindent": {
           "type": "boolean",
