--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vim emulation for Visual Studio Code",
   "icon": "images/icon.png",
   "version": "1.27.1",
-  "publisher": "vscodevim",
+  "publisher": "HyunggyuJang",
   "galleryBanner": {
     "color": "#e3f4ff",
     "theme": "light"
