--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vim-with-killring",
-  "displayName": "Vim",
+  "displayName": "Vim wtih Kill Ring",
   "description": "Vim emulation for Visual Studio Code, with killring support",
   "icon": "images/icon.png",
   "version": "1.27.1",
