--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vim-with-killring",
-  "displayName": "Vim with Kill Ring",
-  "description": "Vim emulation for Visual Studio Code, with killring support",
+  "name": "vim",
+  "displayName": "Vim",
+  "description": "Vim emulation for Visual Studio Code",
   "icon": "images/icon.png",
-  "version": "1.0.6",
-  "publisher": "HyunggyuJang",
+  "version": "1.27.2",
+  "publisher": "vscodevim",
   "galleryBanner": {
     "color": "#e3f4ff",
     "theme": "light"
@@ -17,11 +17,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/HyunggyuJang/Vim.git"
+    "url": "https://github.com/VSCodeVim/Vim.git"
   },
-  "homepage": "https://github.com/HyunggyuJang/Vim",
+  "homepage": "https://github.com/VSCodeVim/Vim",
   "bugs": {
-    "url": "https://github.com/HyunggyuJang/Vim/issues"
+    "url": "https://github.com/VSCodeVim/Vim/issues"
   },
   "engines": {
     "vscode": "^1.74.0"
