Fixes #2217. Support `langmap` (#8541)

--- a/package.json
+++ b/package.json
@@ -1149,6 +1149,10 @@
           "type": "string",
           "description": "Path to the shell to use for `!` and `:!` commands.",
           "default": ""
+        },
+        "vim.langmap": {
+          "type": "string",
+          "description": "Language map for alternate keyboard layouts. When you are typing text in Insert (or Replace, etc.) mode, the characters are inserted derectly. Otherwise, they are translated based on the provided map."
         }
       }
     },
