fix(keybindings): make tab and escape play nicer with native vscode keybindings
fixes:
- `extension.vim_tab` should not take priority over `tab` keybinding that accepts Next Edit Suggestions (aka Inline Edits; NES for short)
- `extension.vim_escape` should not take priority over:
	- `escape` keybinding to hide inline suggestion/completion (eg. Copilot's ghost text completion)
	- `escape` keybinding to hide NES
	- `escape` to hide:
		- testing-explorer peek
		- suggest (aka intellisense) widget
		- find widget (escape currently cannot hide find widget if it's not focused)
		- dirty-diff widget
	- de-focusing notebook cell when vim is in normal mode

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
       {
         "key": "Escape",
         "command": "extension.vim_escape",
-        "when": "editorTextFocus && vim.active && !inDebugRepl"
+        "when": "editorTextFocus && vim.active && !inDebugRepl && !inlineSuggestionVisible && !inlineEditIsVisible && !testing.isPeekVisible && !testing.isInPeek && !suggestWidgetVisible && !findWidgetVisible && !dirtyDiffVisible && (vim.mode == 'Insert' || !notebookEditorFocused)"
       },
       {
         "key": "Escape",
@@ -112,7 +112,7 @@
       {
         "key": "tab",
         "command": "extension.vim_tab",
-        "when": "editorTextFocus && vim.active && vim.mode != 'Insert' && !inDebugRepl"
+        "when": "editorTextFocus && vim.active && vim.mode != 'Insert' && !inDebugRepl && !inlineEditIsVisible"
       },
       {
         "key": "shift+tab",
