--- a/package.json
+++ b/package.json
@@ -64,6 +64,10 @@
         "command": "vim.editVimrc",
         "enablement": "!isWeb",
         "title": "Vim: Edit .vimrc"
+      },
+      {
+        "command": "vim.runVimscript",
+        "title": "Vim: Run Vimscript"
       }
     ],
     "keybindings": [
