--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vim",
-  "displayName": "Vim",
+  "name": "hacxy-vim",
+  "displayName": "HacxyVim",
   "description": "Vim emulation for Visual Studio Code",
   "icon": "images/icon.png",
-  "version": "1.30.1",
+  "version": "1.0.0",
   "publisher": "vscodevim",
   "galleryBanner": {
     "color": "#e3f4ff",
