--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Vim",
   "description": "Vim emulation for Visual Studio Code",
   "icon": "images/icon.png",
-  "version": "1.30.2-rc3",
+  "version": "1.30.1",
   "publisher": "vscodevim",
   "galleryBanner": {
     "color": "#e3f4ff",
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/VSCodeVim/Vim",
   "bugs": {
-    "url": "https://github.com/VSCodeVim/Vem/issues"
+    "url": "https://github.com/VSCodeVim/Vim/issues"
   },
   "engines": {
     "vscode": "^1.74.0"
