--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vim",
   "displayName": "Vim",
   "description": "Vim emulation for Visual Studio Code",
+  "type": "module",
   "icon": "images/icon.png",
   "version": "1.30.1",
   "publisher": "vscodevim",
