--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     },
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true
-    // "isolatedModules": true,
+    "esModuleInterop": true,
+    "isolatedModules": true
   },
   "exclude": ["node_modules", "!node_modules/@types"]
 }
