--- a/package.json
+++ b/package.json
@@ -1211,6 +1211,7 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "@vscode/test-electron": "2.5.2",
+    "@vscode/vsce": "^3.6.2",
     "circular-dependency-plugin": "^5.2.2",
     "clean-webpack-plugin": "4.0.0",
     "eslint": "^8.52.0",
@@ -1233,7 +1234,6 @@
     "sinon": "20.0.0",
     "ts-loader": "9.5.4",
     "typescript": "5.9.3",
-    "vsce": "2.15.0",
     "webpack": "5.102.0",
     "webpack-cli": "6.0.1",
     "webpack-merge": "6.0.1",
