--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vim",
   "displayName": "Vim",
   "description": "Vim emulation for Visual Studio Code",
-  "type": "module",
   "icon": "images/icon.png",
   "version": "1.30.1",
   "publisher": "vscodevim",
@@ -40,8 +39,8 @@
     "onCommand:type"
   ],
   "qna": "https://github.com/VSCodeVim/Vim/discussions",
-  "main": "./out/extension",
-  "browser": "./out/extensionWeb",
+  "main": "./out/extension.js",
+  "browser": "./out/extensionWeb.js",
   "capabilities": {
     "untrustedWorkspaces": {
       "supported": true
@@ -1191,19 +1190,19 @@
   },
   "dependencies": {
     "diff-match-patch": "1.0.5",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "neovim": "5.4.0",
     "os-browserify": "0.3.0",
     "parsimmon": "^1.18.0",
     "path-browserify": "1.0.1",
     "process": "0.11.10",
     "queue": "^6.0.2",
-    "untildify": "4.0.0",
+    "untildify": "6.0.0",
     "util": "0.12.5"
   },
   "devDependencies": {
     "@types/diff-match-patch": "1.0.36",
-    "@types/lodash": "4.17.17",
+    "@types/lodash-es": "4.17.12",
     "@types/mocha": "10.0.10",
     "@types/node": "20.19.17",
     "@types/parsimmon": "1.10.9",
