--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "icon": "images/icon.png",
   "version": "1.30.1",
   "publisher": "vscodevim",
+  "sponsor": {
+    "url": "https://github.com/sponsors/J-Fields"
+  },
   "galleryBanner": {
     "color": "#e3f4ff",
     "theme": "light"
