perf: optimize movement commands with count to execute instantly
Previously, movement commands with counts (e.g., 20j, 50k) would loop
through each individual movement, causing visible lag and poor performance.

This commit optimizes the four basic movement commands (j, k, h, l) by
overriding execActionWithCount to calculate the target position directly
instead of looping:

- MoveDown (j): Calculates target line as current + count
- MoveUp (k): Calculates target line as current - count
- MoveLeft (h): Calculates target character with surrogate pair handling
- MoveRight (l): Calculates target character with surrogate pair handling

All special cases are preserved:
- Interactive window history navigation
- Foldfix mode compatibility
- Operator context (d20j, y10k work correctly)
- Visual mode selections
- Column preservation for vertical movements
- Boundary checks (don't exceed document limits)

Additionally fixed build issues:
- Updated test/index.ts to use new glob API (async/await)
- Added skipLibCheck to tsconfig.json for node_modules compatibility
- Added ignoreDeprecations: "6.0" to silence baseUrl warning

Fixes #8557

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,15 @@
     "strict": true,
     "useUnknownInCatchVariables": false,
     "experimentalDecorators": true,
+    "ignoreDeprecations": "6.0",
     "baseUrl": ".",
     "paths": {
       "platform/*": ["src/platform/node/*"]
     },
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true
     // "isolatedModules": true,
   },
   "exclude": ["node_modules", "!node_modules/@types"]
