--- a/package.json
+++ b/package.json
@@ -1178,10 +1178,11 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "gulp build",
-    "build": "gulp build",
-    "build-dev": "gulp build-dev",
+    "vscode:prepublish": "yarn build",
+    "build": "webpack -c webpack.config.js && npm run commit-hash",
+    "build-dev": "webpack -c webpack.dev.js && npm run commit-hash",
     "build-test": "gulp prepare-test",
+    "commit-hash": "git rev-parse HEAD > out/version.txt",
     "test": "node ./out/test/runTest.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -1225,7 +1226,7 @@
     "fork-ts-checker-webpack-plugin": "9.1.0",
     "gulp": "5.0.1",
     "gulp-bump": "3.2.0",
-    "gulp-git": "2.11.0",
+    "gulp-shell": "^0.8.0",
     "gulp-tag-version": "1.3.1",
     "gulp-typescript": "5.0.1",
     "husky": "^9.0.0",
@@ -1239,8 +1240,7 @@
     "typescript": "5.9.3",
     "webpack": "5.103.0",
     "webpack-cli": "6.0.1",
-    "webpack-merge": "6.0.1",
-    "webpack-stream": "7.0.0"
+    "webpack-merge": "6.0.1"
   },
   "lint-staged": {
     "*.{ts,js,json,md,yml}": "prettier --write",
