--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,11 +25,11 @@ jobs:
         run: yarn lint
 
       - name: Build
-        run: gulp webpack
+        run: yarn build
 
       - name: Test
         run: |
-          gulp prepare-test
+          yarn build-test
           xvfb-run -a yarn test
 
       - name: Build extension package
