--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,33 +15,38 @@ jobs:
       - name: Checkout VSCodeVim
         uses: actions/checkout@v6
 
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: Set up Node.js
         uses: actions/setup-node@v6
         with:
           node-version: 20
-          cache: yarn
+          cache: pnpm
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: pnpm install
 
       - name: Prettier
         if: matrix.os != 'windows-latest'
-        run: yarn prettier:check
+        run: pnpm prettier:check
 
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
 
       - name: Build
-        run: yarn build
+        run: pnpm build
 
       - name: Test on ubuntu-latest
         if: matrix.os != 'windows-latest'
         run: |
-          yarn build-test
-          xvfb-run -a yarn test
+          pnpm build-test
+          xvfb-run -a pnpm test
 
       - name: Test on windows-latest
         if: matrix.os == 'windows-latest'
         run: |
-          yarn build-test
-          yarn test
+          pnpm build-test
+          pnpm test
