--- a/package.json
+++ b/package.json
@@ -1235,6 +1235,7 @@
     "mocha": "11.7.2",
     "plugin-error": "2.0.1",
     "prettier": "3.6.2",
+    "prettier-plugin-organize-imports": "^4.3.0",
     "sinon": "20.0.0",
     "ts-loader": "9.5.4",
     "typescript": "5.9.3",
