Skip linting on windows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
         run: yarn prettier:check
 
       - name: Lint
+        if: matrix.os != 'windows-latest'
         run: yarn lint
 
       - name: Build
