feat: Automatically start in Insert mode for specific schemes (#9854)
Refs #8782

--- a/package.json
+++ b/package.json
@@ -813,6 +813,16 @@
           "type": "boolean",
           "description": "Start in Insert mode."
         },
+        "vim.startInInsertModeSchemes": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "default": [
+            "comment"
+          ],
+          "markdownDescription": "List of document URI schemes that should automatically start in Insert mode. For example, use `[\"comment\"]` for GitHub PR comment editors, or `[\"comment\", \"gitlens\"]` for multiple schemes."
+        },
         "vim.handleKeys": {
           "type": "object",
           "description": "Delegate certain key combinations back to VS Code to be handled natively.",
