Add missing @types/minimatch devDependency
`gulp prepare-test` fails when re-resolving dependencies (e.g.
`yarn install --no-lockfile`) because `@types/glob` depends on
`@types/minimatch` types, but `@types/minimatch` was not in
devDependencies.

CI uses `yarn install --frozen-lockfile` which pins the original
minimatch version that bundled its own types, so CI passes. The
issue only surfaces on a fresh contributor setup where yarn
resolves a newer minimatch that no longer bundles types.

--- a/package.json
+++ b/package.json
@@ -1217,6 +1217,7 @@
   "devDependencies": {
     "@types/diff-match-patch": "1.0.36",
     "@types/lodash": "4.17.17",
+    "@types/minimatch": "5.1.2",
     "@types/mocha": "10.0.10",
     "@types/node": "22.19.1",
     "@types/parsimmon": "1.10.9",
