Fix pre-existing build issues
Update glob import in test/index.ts for glob v9+ API (named export,
promise-based) and add skipLibCheck to tsconfig.json to resolve
@types/glob incompatibility.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     },
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true
     // "isolatedModules": true,
   },
   "exclude": ["node_modules", "!node_modules/@types"]
